--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
         <footer class="pt-6 border-t border-white/10 text-center">
             <p class="text-[11px] font-bold text-slate-500">КУРС: 1 EUR = 1.95583 BGN</p>
-            <p class="text-[10px] text-slate-600 mt-1 italic">Име на ученик © 2026</p>
+            <p class="text-[10px] text-slate-600 mt-1 italic">MARTIN PETKOV © 2026</p>
         </footer>
     </div>
 
@@ -158,3 +158,4 @@
     </script>
 </body>
 </html>
+
