--- a/index.html
+++ b/index.html
@@ -153,9 +153,11 @@
             } else {
                 resArea.classList.add('hidden');
                 errBox.classList.add('hidden');
-            }
+            }<link rel="icon" type="image/png" href="icon.png">
+<link rel="apple-touch-icon" href="icon.png">
         }
     </script>
 </body>
 </html>
+
 
