--- a/index.html
+++ b/index.html
@@ -152,12 +152,12 @@
                 document.getElementById('subChangeText').innerText = 'Равностойност: ' + changeInBgn.toFixed(2) + ' лв.';
             } else {
                 resArea.classList.add('hidden');
-                errBox.classList.add('hidden');
-            }<link rel="icon" type="image/png" href="icon.png">
-<link rel="apple-touch-icon" href="icon.png">
+                errBox.classList.add('hidden')
         }
+    }
     </script>
 </body>
 </html>
+
 
 
